# WorkDataHub

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  COMMANDS.md  DISCUSS.md  INITIAL.C-026.md  INITIAL.md  README.md  ROADMAP.md  TASK.md  VALIDATION.md  alembic.ini  pyproject.toml  workspace.yaml
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.claude/: settings.local.json
.claude/agents/: validation-gates.md
.claude/commands/: execute-prp.md  generate-prp.md
.github/workflows/: ci.yml
.tmp/: pytest-collect.txt
PRPs/: P-003.md  P-004.md  P-015.md  P-017.md  P-019.md  P-020.md  P-021.md  P-022.md  P-027.md  P-S02-2.md  P-S02.md  P-S04-2.md  P-S04-3.md  S-001.md  transactional-postgresql-loader.md  work-data-hub-skeleton.md
PRPs/templates/: INITIAL.template.md  prp_base.md
_bmad-output/: database-migrations.md  project-context.md
_bmad-output/implementation-artifacts/: 7.6-13-customer-plan-contract-name-fields.md  7.6-15-ratchet-rule-implementation.md  diagnostic-inconsistent-records.sql  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture-boundaries.md  bmm-data-models.md  bmm-workflow-status.yaml  brownfield-architecture.md  project-context.md  project-scan-report.json  ux-design-specification.md
_bmad-output/test-artifacts/: framework-setup-progress.md  test-design-architecture.md  test-design-progress.md  test-design-qa.md  test-review.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
config/: customer_mdm.yaml  customer_status_rules.yml  data_sources.yml  domain_sources.yaml  eqc_confidence.yml  foreign_keys.yml  reference_sync.yml
config/mappings/: default_plan_institution_code.yml
config/reference_data/: product_lines.yml
config/seeds/: README.md
data/mappings/: __init__.py  business_type_code.yml  company_id_overrides_account.yml  company_id_overrides_account_name.yml  company_id_overrides_hardcode.yml  company_id_overrides_name.yml
docs/: INITIAL.md  PRD.md  VALIDATION.md  architecture-boundaries.md  architecture.md  backlog.md  bmm-data-models.md  bmm-index.md  bmm-source-tree-analysis.md  bmm-workflow-status.yaml  brownfield-architecture.md  data_processing_guide.md  database-migrations.md  database-schema-panorama.md  deployment_run_guide.md  deployment_run_guide_intranet.md  domain_processing_flows.md  epic-6-testing-validation.md  epics.md  index.md  mandatory-conditions-addendum.md  migration-guide.md  project-context.md  project-scan-report.json  sprint-status.yaml  tech-spec-epic-1.md  verification_guide_real_data.md
docs/DoR/: INITIAL_00.md  INITIAL_02.md  INITIAL_03.md
docs/architecture/: appendices.md  architectural-decisions.md  domain-registry.md  implementation-patterns.md  infrastructure-layer.md  integration-architecture.md  non-functional-requirements.md  novel-patterns.md  technology-stack.md
docs/architecture-patterns/: epic-2-performance-acceptance-criteria.md  error-message-quality-standards.md  pipeline-integration-guide.md  tiered-retry-classification.md
docs/business-background/: annuity-plan-types-and-customer-name.md  customer-mdm-backfill-analysis.md
docs/cleansing-rules/: annuity-income.md  annuity-performance.md  annuity_performance.md  index.md
docs/company_id/: INITIAL.CI-002A_Provider与Gateway最小闭环.md  INITIAL.CI-002B_缓存与名称索引与请求队列.md  INITIAL.CI-002C_同步小预算富化集成.md  INITIAL.CI-002D_异步回填作业与队列消费者.md  INITIAL.CI-002E_可观测性与运营指标.md  INITIAL.CI-002F_真实Provider(EQC)实现与密钥管理.md  INITIAL.CI-002G_Legacy爬虫适配与去副作用.md  INITIAL.CI-002H_存量数据迁移与兼容导入(Mongo-MySQL到Postgres缓存).md  INITIAL.CI-002_企业信息查询集成与客户ID富化闭环.md
docs/components/: eqc_slider_troubleshooting.md
docs/context-engineering/: core-development-philosophy.md  debugging-tools.md  development-environment.md  documentation-standards.md  error-handling.md  git-workflow.md  monitoring-and-observability.md  performance-considerations.md  security-best-practices.md  style-and-conventions.md  testing-strategy.md  useful-resources.md
docs/crystallization/: schemas-architecture-deep-dive.md
docs/deep-research/: WorkDataHub 系统重构项目技术架构与实施指南.md
docs/deep_research/: 1.md  2.md  3.md  4.md
docs/deprecations/: company_master_table_deprecation.md
docs/domains/: annuity_performance.md
docs/effect-verification/: Epic-6.1-Verification-Plan-2025-12-08.md
docs/epics/: epic-2-multi-layer-data-quality-framework.md  epic-3-intelligent-file-discovery-version-detection.md  epic-5-infrastructure-layer.md  epic-6-company-enrichment-service.md  epic-structure-summary.md  index.md  overview.md
docs/experience/: fk-backfill-config-validation.md
docs/guides/: developer-guide.md  domain-development-guide.md  eqc-token-guide.md  index.md
docs/implement/: 01_implementation_plan.md
docs/implementation-artifacts/: tech-spec-annuity-customer-schema-migration.md
docs/infrastructure/: transforms.md
docs/initial/: implementation-readiness-report-2025-11-09.md  key-points.md  research-deep-prompt-2025-11-08.md  validation-report-architecture-2025-11-09.md
docs/memories/: 战客身份定义与更新逻辑.md
docs/overview/: 01_system_overview.md  LEGACY_INVENTORY.md  LEGACY_WORKFLOW_ANALYSIS.md  MIGRATION_REFERENCE.md  R-015_LEGACY_INVENTORY.md  README.md
docs/pingan/: PyPI仓库使用说明.md
docs/plans/: deployment-seed-eqc-validation-plan-2026-03-08.md
docs/prd/: functional-requirements.md  (+5 more)
legacy/: README.md
reference/: 01_company_id_analysis.md  02_version_detection_logic.md  INITIAL_TEST.md
scripts/: __init__.py  analyze_missing_records.py  analyze_sync_issues.py  check_customer_coverage.py  db_setup.py  diag_output.txt  diag_snapshot.py  diagnose_backfill_full.py  diagnose_backfill_i006.py  fix_schema_refs.py  query_table.py  test_dagster_config.py  verify_contract_sync.py  verify_test_migration.py
src/: __init__.py
tests/: .migration_baseline.txt  README.md  __init__.py  conftest.py  test_cleansing_framework.py
tools/: eqc_cdp_client.py  eqc_simple_client.py  eqc_token_manager.py  quick_token_setup.py  start_eqc_chrome.bat
(+1542 files in other folders)
